--- a/HttpClient78/HttpClient78.csproj
+++ b/HttpClient78/HttpClient78.csproj
@@ -8,7 +8,16 @@
     <IsPackable>false</IsPackable>
 
     <RootNamespace>www778878net</RootNamespace>
+
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.17.1" />
