--- a/Test78/Test78.csproj
+++ b/Test78/Test78.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <StartupObject>Test78.ProgramHelpers</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
